Enhance Routes page with auto-advance feature and update appsettings.json with Google Maps API key

--- a/CycleRoutes/CycleRoutes.Web/appsettings.json
+++ b/CycleRoutes/CycleRoutes.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "GoogleMaps": {
-    "ApiKey": "TBC"
+    "ApiKey": "AIzaSyCP-3QdopZqsQbWX_xTyTnklQQtKVCRSBM"
   }
 }
