--- a/.github/workflows/CycleRoutesWeb.yml
+++ b/.github/workflows/CycleRoutesWeb.yml
@@ -5,10 +5,10 @@ on:
     - main
 env:
   AZURE_WEBAPP_NAME: CycleRoutesWeb
-  AZURE_WEBAPP_PACKAGE_PATH: CycleRoutes\CycleRoutes.Web\published
+  AZURE_WEBAPP_PACKAGE_PATH: CycleRoutes/CycleRoutes.Web/published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 9.0.x
-  WORKING_DIRECTORY: CycleRoutes\CycleRoutes.Web
+  WORKING_DIRECTORY: CycleRoutes/CycleRoutes.Web
 jobs:
   build:
     runs-on: windows-latest
@@ -19,11 +19,11 @@ jobs:
       with:
         dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
     - name: Restore
-      run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
+      run: dotnet restore "CycleRoutes.slnx"
     - name: Build
-      run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+      run: dotnet build "CycleRoutes.slnx" --configuration ${{ env.CONFIGURATION }} --no-restore
     - name: Test
-      run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
+      run: dotnet test "CycleRoutes.slnx" --no-build
     - name: Publish
       run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
     - name: Publish Artifacts
@@ -34,6 +34,9 @@ jobs:
   deploy:
     runs-on: windows-latest
     needs: build
+    permissions:
+      id-token: write
+      contents: read
     steps:
     - name: Download artifact from build job
       uses: actions/download-artifact@v4
@@ -43,7 +46,9 @@ jobs:
     - name: Azure Login
       uses: azure/login@v2
       with:
-        creds: ${{ secrets.CycleRoutesWeb_SPN }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
