--- a/.github/workflows/CycleRoutesWeb.yml
+++ b/.github/workflows/CycleRoutesWeb.yml
@@ -49,6 +49,10 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    - name: Verify Azure Login
+      run: |
+        az account show
+        az account list --output table
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
